2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Improve the --help output (#335016, Vincent Untz).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Translate a string (#334509)

	=== BRANCHPOINT ===
	
2006-04-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.14.3.

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Fix reversed check for invalid iterator. Fixes "Play doesn't work"
	and "only plays track 1" (#338144).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add some buffering (#336319).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/gsttaglib.cc:
	* src/gsttaglib.h:
	Re-namespace to avoid conflicting with the real taglibmux.

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Ensure the window title is reset when we read a CD (#337566).

2006-04-09  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* configure.in: Award myself the "useless use of cat" award.

2006-04-09  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add more calls to sj_main_set_title(NULL) (#337566)

2006-04-09  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* po/LINGUAS: New file listing all supported languages.

	* configure.in: Use po/LINGUAS instead of including all languages
	directly in this file. See the wiki for more information:
	http://live.gnome.org/GnomeGoals/PoLinguas

2006-04-08  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Remove gcc-ism (#337393, Damien Carbery)

2006-04-08  Ross Burton  <ross@burtonini.com>

	* src/gsttaglib.c:
	Possibly fix plugin initialisation (#337223)

2006-04-08  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Don't set the encoder tags, set the duration, and cleanup error
	handling.

2006-04-08  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Don't set sortname to incorrect data (Peter Oliver)

2006-04-08  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.h:
	Remove unused structure.