@@ -150,5 +150,16 @@
       </locale>
     </schema>
 
+    <schema>
+      <key>/schemas/apps/sound-juicer/volume</key>
+      <applyto>/apps/sound-juicer/volume</applyto>
+      <type>float</type>
+      <owner>sound-juicer</owner>
+      <default>1.0</default>
+      <locale name="C">
+        <short>Audio volume</short>
+      </locale>
+    </schema>
+
   </schemalist>
 </gconfschemafile>
