@@ -1,5 +1,13 @@
 2006-04-14  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.schemas.in:
+	* src/sj-main.c:
+	* src/sj-play.c:
+	* src/sound-juicer.h:
+	Save and restore playback volume (#335170, Marinus Schraal).
+
+2006-04-14  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Improve the --help output (#335016, Vincent Untz).
 
